# ocr-svg

./: README.md  pyproject.toml
